<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="140dp"
        android:layout_height="100dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/red"
            android:fontFamily="@font/cairo_black"
            android:paddingHorizontal="8dp"
            android:text="1"
            android:textColor="@color/white" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:maxLines="2"
            android:paddingHorizontal="8dp"
            android:text="@string/label_artist_name"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:maxLines="2"
            android:paddingHorizontal="8dp"
            android:text="@string/label_monthly_listeners"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:text="@string/value_default_monthly_listeners"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
