<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.artists.detail.DetailArtistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/banner_color"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/artist_profile_image"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/cairo_black"
                    android:text="@string/label_artist_name"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_artist_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:itemCount="4"
            tools:listitem="@layout/item_genre" />

        <TextView
            android:id="@+id/artist_biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/cairo"
            android:textIsSelectable="true"
            android:text="Artist Short Bio"
            android:textAlignment="center"
            android:textColor="@color/navy_blue"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/cairo"
            android:text="@string/label_monthly_listeners"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/artist_monthly_listener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/value_default_monthly_listeners"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/label_album_lists"
            android:textAlignment="center"
            android:textColor="@color/navy_blue"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_album_lists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:nestedScrollingEnabled="false"
            tools:itemCount="3"
            tools:listitem="@layout/item_album" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>