<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.artists.ArtistsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/cairo_bold"
            android:lineSpacingMultiplier=".8"
            android:text="Most Streamed Artist in Spotify\n(Update March 10, 2021)"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/artist_number_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="180dp"
                android:layout_height="130dp">

                <ImageView
                    android:id="@+id/artist_image_r1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/red"
                    android:fontFamily="@font/cairo_black"
                    android:paddingHorizontal="8dp"
                    android:text="1"
                    android:textColor="@color/white" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/artist_name_r1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/tb_favorite"
                        android:fontFamily="@font/cairo_bold"
                        android:maxLines="2"
                        android:paddingHorizontal="8dp"
                        android:text="@string/label_artist_name"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <ToggleButton
                        android:id="@+id/tb_favorite"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/ic_baseline_favorite_border_32"
                        android:textOff=""
                        android:textOn="" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/cairo"
                    android:maxLines="2"
                    android:paddingHorizontal="6dp"
                    android:text="@string/label_monthly_listeners"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/artist_monthly_listener_r1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:text="@string/value_default_monthly_listeners"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:nestedScrollingEnabled="false"
            tools:itemCount="9"
            tools:listitem="@layout/item_artist_list" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>